[tool.poetry]
name = "pad-final-project"
version = "0.1.0"
description = ""
authors = ["Eduardo Miralles <emirallesiz@alumni.unav.es>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
