[tool.poetry]
name = "pad-final-project"
version = "0.1.0"
description = "Final project for the 'Python for data analysis' subject in the UNAV Master's degree in Big Data Science."
authors = ["Eduardo Miralles <emirallesiz@alumni.unav.es>"]
readme = "README.md"
repository = "https://github.com/eduardo-miralles/pad-final-project"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
